--- a/src/pages/prize/prize.component.html
+++ b/src/pages/prize/prize.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-09 16:34:24
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-09 17:22:16
+ * @LastEditTime: 2021-11-10 09:52:47
 -->
 <div class="stretchingBg widthApp" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/loading_ui/loading_bg.jpg)'">
   <div class="prizeListContainer" [style.height]="pageHeight - 220 + 'px'"></div>
@@ -20,6 +20,11 @@
   <div *ngIf="!showPrize">
     <app-image-button [imgData]="allPrizeBtn" (itemClick)="switchPannel( true )"></app-image-button>
     <app-image [imgData]="packageIcon"></app-image>
+    <app-image-button [imgData]="addressBtn" (itemClick)="editAddress()"></app-image-button>
+    <div class="addressDiv noneSelect">
+      <div class="firstLine"><span class="spanBold">{{itemData.first_name}}&nbsp;&nbsp;{{itemData.last_name}}</span><span class="spanGray">{{itemData.tel}}</span></div>
+      <div class="allElse">{{mainString}}</div>
+    </div>
     <app-image-button [imgData]="addBtn" (itemClick)="addOrder()"></app-image-button>
   </div>
 </div>
