--- a/src/pages/prize/prize-item/prize-item.component.css
+++ b/src/pages/prize/prize-item/prize-item.component.css
@@ -16,11 +16,24 @@
     font-size: 30px;
     font-weight: 600;
 }
-.create{
-    left: 225px;
-    top: 90px;
+.blackText{
     width: 300px;
     color: black;
     font-size: 25px;
+    font-weight: 600;
+}
+.create{
+    left: 225px;
+    top: 90px;
+}
+.expire{
+    left: 225px;
+    top: 125px;
+}
+.hasExpired{
+    left: 225px;
+    top: 125px;
+    color: red;
+    font-size: 30px;
     font-weight: 600;
 }
