--- a/src/pages/prize/prize-item/prize-item.component.html
+++ b/src/pages/prize/prize-item/prize-item.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-10 10:39:07
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-10 11:53:19
+ * @LastEditTime: 2021-11-10 14:03:44
 -->
 <div [style.top]="index * 208 + 'px'" #itemInList>
   <app-image [imgData]="itemBg"></app-image>
@@ -14,5 +14,7 @@
   <app-image [imgData]="imageFrame"></app-image>
   <app-scroll-list-button [imgData]="infoIcon" (itemClick)="showInfo()"></app-scroll-list-button>
   <div class="title">{{itemData.name}}</div>
-  <div class="create">{{createTime}}</div>
+  <div class="create blackText">{{createTime}}</div>
+  <div class="expire blackText" *ngIf="!isExpire">{{expireTime}}</div>
+  <div class="hasExpired" *ngIf="isExpire">expired</div>
 </div>
