--- a/src/pages/prize/prize-item/prize-item.component.html
+++ b/src/pages/prize/prize-item/prize-item.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-10 10:39:07
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-10 14:03:44
+ * @LastEditTime: 2021-11-10 17:55:28
 -->
 <div [style.top]="index * 208 + 'px'" #itemInList>
   <app-image [imgData]="itemBg"></app-image>
@@ -17,4 +17,6 @@
   <div class="create blackText">{{createTime}}</div>
   <div class="expire blackText" *ngIf="!isExpire">{{expireTime}}</div>
   <div class="hasExpired" *ngIf="isExpire">expired</div>
+  <app-scroll-list-button [imgData]="sellBtn" (itemClick)="sellTicket()"></app-scroll-list-button>
+  <app-scroll-list-button [imgData]="packBtn" (itemClick)="packageItems()"></app-scroll-list-button>
 </div>
