--- a/src/pages/start-up/start-up.component.html
+++ b/src/pages/start-up/start-up.component.html
@@ -4,11 +4,11 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-14 13:31:19
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-21 14:28:38
+ * @LastEditTime: 2021-11-12 10:50:08
 -->
 <div class="stretchingBg widthApp" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/start_up/bg.png)'">
     <div #startPageEntity class="startPageEntity">
-        <div *ngFor="let item of tipPages; let i = index" [style.left]="750 * i + 'px'">
+        <div *ngFor="let item of tipPagesForShow; let i = index" [style.left]="750 * (i-1) + 'px'">
             <app-image [imgData]="item"></app-image>
             <app-image-button [imgData]="getBtnUI(i)"></app-image-button>
         </div>
