--- a/src/pages/my/video-play-back/video-play-back.component.css
+++ b/src/pages/my/video-play-back/video-play-back.component.css
@@ -1,7 +1,19 @@
 .video{
     position: absolute;
+    top: 95px;
+    object-fit: fill;
 }
 .bottom_bar{
     bottom: 0px;
     height: 480px;
+}
+.productImg{
+    position: absolute;
+    left: 70px;
+    top: 105px;
+    width: 245px;
+    height: 245px;
+    -moz-border-radius: 30px;
+    -webkit-border-radius: 30px;
+    border-radius:30px;
 }
