--- a/src/basicUI/egret-mc/egret-mc.component.css
+++ b/src/basicUI/egret-mc/egret-mc.component.css
@@ -1,10 +1,12 @@
 .mc{
     position: absolute;
-    overflow: hidden;
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
     pointer-events: none;
+}
+.mcInner{
+    overflow: hidden;
 }
 .mcImg{
     width: initial;
