--- a/src/basicUI/egret-mc/egret-mc.component.html
+++ b/src/basicUI/egret-mc/egret-mc.component.html
@@ -4,8 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-12-13 17:34:13
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-13 17:35:39
+ * @LastEditTime: 2021-12-14 15:08:56
 -->
-<div class="mc" [style.width]="width+'px'" [style.height]="height+'px'" [style.left]="x+'px'" [style.top]="y+'px'" [style.transform]="matrix" #mc>
-  <img [src]="movieClipData" class="mcImg" (load)="bgTextureLoaded()"/>
+<div class="mc" [style.left]="x+'px'" [style.top]="y+'px'" [style.transform]="matrix" #mc>
+  <div class="mcInner" [style.width]="width+'px'" [style.height]="height+'px'" [style.left]="offsetX+'px'" [style.top]="offsetY+'px'" >
+    <img [src]="movieClipData" class="mcImg" (load)="bgTextureLoaded()"/>
+  </div>
 </div>
