--- a/src/popups/product-info/product-info.component.html
+++ b/src/popups/product-info/product-info.component.html
@@ -4,14 +4,15 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-09 16:53:48
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-14 14:39:22
+ * @LastEditTime: 2021-12-14 17:35:36
 -->
 <div [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <img [src]="productImg" (load)="productImgLoaded()" class="productImg noneSelect"/>
   <app-movie-clip [movieClip]="guang"></app-movie-clip>
-  <app-movie-clip [movieClip]="fireworks"></app-movie-clip>
+  <app-egret-mc [movieClip]="turboBalls"></app-egret-mc>
   <app-egret-mc [movieClip]="turbo90"></app-egret-mc>
+  <app-movie-clip [movieClip]="fireworks"></app-movie-clip>
   <app-image [imgData]="popupBg"></app-image>
   <app-image-button [imgData]="goBtn" (itemClick)="goPlay()" ></app-image-button>
   <app-image-button [imgData]="closeBtn" (itemClick)="closePo()" ></app-image-button>
