--- a/src/popups/product-info/product-info.component.html
+++ b/src/popups/product-info/product-info.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-09 16:53:48
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-14 17:35:36
+ * @LastEditTime: 2021-12-15 10:17:28
 -->
 <div [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
@@ -13,6 +13,7 @@
   <app-egret-mc [movieClip]="turboBalls"></app-egret-mc>
   <app-egret-mc [movieClip]="turbo90"></app-egret-mc>
   <app-movie-clip [movieClip]="fireworks"></app-movie-clip>
+  <app-egret-mc [movieClip]="dice"></app-egret-mc>
   <app-image [imgData]="popupBg"></app-image>
   <app-image-button [imgData]="goBtn" (itemClick)="goPlay()" ></app-image-button>
   <app-image-button [imgData]="closeBtn" (itemClick)="closePo()" ></app-image-button>
