--- a/src/service/ui/head-bar/head-bar.component.html
+++ b/src/service/ui/head-bar/head-bar.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 13:36:53
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-09 09:51:16
+ * @LastEditTime: 2021-12-21 16:16:08
 -->
-<div class="head">
+<div class="head" [ngStyle]="blendMode">
   <app-image [imgData]="topBarBg"></app-image>
   <div class="facebookHead">
     <img class="headImg" src="assets/default_head.png" width="80" height="80">
