--- a/src/service/ui/head-bar/head-bar.component.html
+++ b/src/service/ui/head-bar/head-bar.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 13:36:53
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-23 10:15:28
+ * @LastEditTime: 2021-12-23 11:45:45
 -->
-<div class="head" [ngStyle]="filters">
+<div>
   <app-image [imgData]="topBarBg"></app-image>
   <div class="facebookHead">
     <img class="headImg" src="assets/default_head.png" width="80" height="80">
