popup text field

--- a/src/service/ui/popup-text-field/popup-text-field.component.html
+++ b/src/service/ui/popup-text-field/popup-text-field.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-07-19 12:00:32
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-21 13:25:20
+ * @LastEditTime: 2021-12-23 14:10:53
 -->
 <div class="textField noneSelect" [style]="divStyle">
-  <span class="sp" [style]="spanStyle" #sp>{{text}}</span>
+  <span class="sp" [style]="spanStyle" [ngStyle]="strokeStyle" #sp>{{text}}</span>
 </div>
