--- a/src/pages/my/ledger/ledger-item/ledger-item.component.css
+++ b/src/pages/my/ledger/ledger-item/ledger-item.component.css
@@ -1,3 +1,14 @@
+.productImg{
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    width: 150px;
+    height: 150px;
+    -moz-border-radius: 34px;
+    -webkit-border-radius: 34px;
+    border-radius: 34px;
+    border: 2px solid #067252;
+}
 .timeDiv{
     left: 15px;
     top: 20px;
