--- a/src/popups/daily-bonus/daily-item/daily-item.component.css
+++ b/src/popups/daily-bonus/daily-item/daily-item.component.css
@@ -1,4 +1,5 @@
 .handImg{
+    position: absolute;
     left: 60px;
     top: 180px;
 }
@@ -14,6 +15,7 @@
     border-radius:15px;
 }
 .gettingDailyBonusGreenCheck{
+    position: absolute;
     left: 0px;
     top: 0px;
 }
