--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,9 @@ div{
 html {
     -webkit-tap-highlight-color: transparent;
 }
+body{
+    overflow: hidden;
+}
 .noneSelect{
     -webkit-user-select: none;
     -moz-user-select: none;
