--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,9 @@ body{
 .lightTextShadow{
     text-shadow: 2px 2px 4px #333333;
 }
+.overFlowHidden{
+    overflow: hidden;
+}
 @font-face {
     font-family: 'luckiest';
     src: url('assets/fonts/Luckiest_Guy_regular.ttf');
