--- a/src/pages/lobby/banner/banner.component.html
+++ b/src/pages/lobby/banner/banner.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-02 14:04:12
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-29 15:05:19
+ * @LastEditTime: 2021-12-29 15:52:28
 -->
-<div class="banner widthApp">
+<div class="banner widthApp overFlowHidden">
   <div #bannerEntity>
     <img [src]="item.art" class="bannerPic widthApp" *ngFor="let item of featureDataForShow; let i = index" [style.left]="( i - (showTouchBar?1:0) ) * 750+'px'" >
   </div>
