--- a/src/pages/lobby/category-bar/category-bar.component.html
+++ b/src/pages/lobby/category-bar/category-bar.component.html
@@ -4,11 +4,11 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-28 13:39:24
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-28 17:40:31
+ * @LastEditTime: 2021-12-29 15:53:12
 -->
 <div class="categoryPart">
   <app-image [imgData]="iconListBg"></app-image>
-  <div class="categoryContainer widthApp">
+  <div class="categoryContainer widthApp overFlowHidden">
     <div class="iconScrollArea" #carousel>
       <img [src]="icon.class_img" *ngFor="let icon of showingIcons; let i = index" [style.left]="(i-7)*160+300+'px'" class="categoryIcon">
     </div>
