--- a/src/pages/my/user-center/user-center.component.html
+++ b/src/pages/my/user-center/user-center.component.html
@@ -4,10 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-10 15:17:37
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-08 17:13:36
+ * @LastEditTime: 2021-12-29 15:55:05
 -->
 <div class="stretchingBg widthApp" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/loading_ui/loading_bg.jpg)'">
-  <div class="facebookHead">
+  <div class="facebookHead overFlowHidden">
     <img src="{{headIcon}}" width="140" height="140">
   </div>
   <app-image [imgData]="headMask"></app-image>
