--- a/src/pages/prize/prize-item/prize-item.component.html
+++ b/src/pages/prize/prize-item/prize-item.component.html
@@ -4,11 +4,11 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-10 10:39:07
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-10 17:55:28
+ * @LastEditTime: 2021-12-29 15:57:05
 -->
 <div [style.top]="index * 208 + 'px'" #itemInList>
   <app-image [imgData]="itemBg"></app-image>
-  <div class="productImgage">
+  <div class="productImgage overFlowHidden">
     <img [attr.src]="itemData.img" width="170" height="170"/>
   </div>
   <app-image [imgData]="imageFrame"></app-image>
