--- a/src/pages/lobby/product-scroll-list/product-scroll-list.component.html
+++ b/src/pages/lobby/product-scroll-list/product-scroll-list.component.html
@@ -4,10 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-07 10:44:16
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-21 14:08:57
+ * @LastEditTime: 2021-12-29 17:01:01
 -->
 <div class="scrollBar widthApp" [style.height]="listHeight + 'px'" #scrollBar>
-  <div class="scrollArea" [style.top]="scrollY + 'px'">
+  <div class="scrollArea">
     <app-product-item *ngFor="let item of listData; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onItemClick($event)"></app-product-item>
   </div>
 </div>
