--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,9 @@
 .mainDiv{
+	position: fixed;
 	left: 50%;
 	top: 50%;
 	margin-left: -375px;
+	overflow: hidden;
 	background-color:#888;
 	-webkit-user-select: none;
     -moz-user-select: none;
