--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,10 @@ html {
     width: 0!important;
     height: 0;
 }
+.middleCenter{
+    left: 50%;
+    top: 50%;
+}
 @font-face {
     font-family: 'luckiest';
     src: url('assets/fonts/Luckiest_Guy_regular.ttf');
