--- a/src/siene/loading-and-po/loading-layer/loading-and-po.component.html
+++ b/src/siene/loading-and-po/loading-layer/loading-and-po.component.html
@@ -4,12 +4,12 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-20 10:43:20
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-29 16:01:55
+ * @LastEditTime: 2021-12-29 17:53:59
 -->
 <div class="overFlowHidden stretchingBg widthApp" [style.height]="mainHeight+'px'" [style.background-image]="loadingBg" [hidden]="!showingLoading">
   <div class="loadingShadow"></div>
   <app-popup-layer></app-popup-layer>
   <div class="widthApp" [hidden]="!showLoadingGif" [style.height]="mainHeight+'px'">
-    <img src="assets/loading_ui/loading.gif" alt="" class="loadingPicture">
+    <img src="assets/loading_ui/loading.gif" alt="" class="loadingPicture middleCenter">
   </div>
 </div>
