--- a/src/basicUI/active-index-point/active-index-point.component.html
+++ b/src/basicUI/active-index-point/active-index-point.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-28 11:08:45
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-28 14:38:00
+ * @LastEditTime: 2021-12-30 11:54:31
 -->
-<div class="pointContainer" [style]="styleString">
-  <span *ngFor="let item of items; let i = index" [class]="i == activeIndex?'active':'disActive'" [style]="spanStyle"></span>
+<div class="pointContainer" [ngStyle]="containnerRect">
+  <span *ngFor="let item of items; let i = index" [ngClass]="i == activeIndex?'active':'disActive'" [ngStyle]="spanStyle"></span>
 </div>
