--- a/src/basicUI/text-field/text-field.component.html
+++ b/src/basicUI/text-field/text-field.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-27 14:31:41
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-19 17:49:16
+ * @LastEditTime: 2021-12-30 13:14:09
 -->
-<div class="textField" [style]="divStyle">
+<div class="textField" [ngStyle]="divStyle">
   <span class="sp" [style]="spanStyle" #sp>{{text}}</span>
 </div>
