--- a/src/basicUI/touchDragBar/touchDragBar.component.html
+++ b/src/basicUI/touchDragBar/touchDragBar.component.html
@@ -4,6 +4,6 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-28 18:07:55
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-08 10:55:39
+ * @LastEditTime: 2021-12-30 13:22:33
 -->
-<div class="touchDragBar" [style]="styleString" #touchDragBar></div>
+<div class="touchDragBar" [ngStyle]="styleObj" #touchDragBar></div>
