--- a/src/pages/my/address/address.component.html
+++ b/src/pages/my/address/address.component.html
@@ -4,11 +4,11 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-01 17:32:02
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-02 17:35:22
+ * @LastEditTime: 2021-12-30 13:32:57
 -->
 <div class="stretchingBg widthApp" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/loading_ui/loading_bg.jpg)'">
   <app-image-button [imgData]="backBtn" (itemClick)="gotoBack()"></app-image-button>
-  <div class="addressListContainer" [style.height]="pageHeight - 250 + 'px'">
+  <div class="addressListContainer" [style.height]="pageHeight - 250 + 'px'" [ngStyle]="borderRadius">
     <app-address-list [listHeight]="pageHeight - 270" [listData]="userAddressList" [textureData]="textureData"></app-address-list>
   </div>
 </div>
