--- a/src/service/ui/head-bar/head-bar.component.html
+++ b/src/service/ui/head-bar/head-bar.component.html
@@ -4,20 +4,20 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 13:36:53
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-29 16:00:59
+ * @LastEditTime: 2021-12-30 13:49:21
 -->
 <div>
   <app-image [imgData]="topBarBg"></app-image>
-  <div class="facebookHead overFlowHidden">
-    <img class="headImg" src="assets/default_head.png" width="80" height="80">
-    <img class="headImg" src="{{headIcon}}" width="80" height="80">
+  <div class="overFlowHidden" [ngStyle]="facebookHead">
+    <img class="positionAbsolute" src="assets/default_head.png" width="80" height="80">
+    <img class="positionAbsolute" src="{{headIcon}}" width="80" height="80">
   </div>
   <app-image-button [imgData]="headMask"  (itemClick)="gotoUserCenter()"></app-image-button>
   <app-image [imgData]="vipIcon" *ngIf="isVip"></app-image>
   <app-image [imgData]="coinsBg1"></app-image>
   <app-image [imgData]="coinsBg2"></app-image>
   <app-image-button [imgData]="dailyBonus" (itemClick)="getDailyBonus()"></app-image-button>
-  <div class="redPot noneSelect" *ngIf="!dailyBonusCollected">{{todaysCoins}}</div>
+  <div class="redPot noneSelect" *ngIf="!dailyBonusCollected" [ngStyle]="redPot">{{todaysCoins}}</div>
   <app-image [imgData]="coin"></app-image>
   <app-image [imgData]="ticket"></app-image>
   <app-image-button [imgData]="plus"  (itemClick)="gotoBank()"></app-image-button>
