--- a/src/pages/lobby/product-scroll-list/product-scroll-list.component.css
+++ b/src/pages/lobby/product-scroll-list/product-scroll-list.component.css
@@ -1,6 +1,4 @@
 .scrollBar{
     top: 130px;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
+    overflow: hidden;
 }
