--- a/src/pages/lobby/product-item/product-item.component.html
+++ b/src/pages/lobby/product-item/product-item.component.html
@@ -4,12 +4,12 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-04 11:40:44
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-30 15:23:21
+ * @LastEditTime: 2021-12-31 10:30:27
 -->
-<div [ngStyle]="position" [attr.itemdata]="index" #itemInList>
+<div [ngStyle]="styles.position" [attr.itemdata]="index" #itemInList>
   <app-image [imgData]="productBg"></app-image>
-  <div [ngStyle]="productPicPosition">
-    <img src={{itemData.img}} width="320px" height="308px" class="noneSelect" [ngStyle]="productImageStyle" (load)="onImgload()">
+  <div [ngStyle]="styles.productPicPosition">
+    <img src={{itemData.img}} width="320px" height="308px" class="noneSelect" [ngStyle]="styles.productImageStyle" (load)="onImgload()">
   </div>
   <app-image [imgData]="vipFlag" *ngIf="isVip"></app-image>
   <app-image [imgData]="coinIcon" *ngIf="!isFree"></app-image>
