--- a/src/popups/result/result-win/result-win.component.html
+++ b/src/popups/result/result-win/result-win.component.html
@@ -4,14 +4,14 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-27 10:21:17
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-30 18:04:05
+ * @LastEditTime: 2021-12-31 10:32:57
 -->
 <div [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image [imgData]="popupBg"></app-image>
   <app-image-button [imgData]="closeBtn" (itemClick)="gotoPrize()"></app-image-button>
   <app-image-button [imgData]="okBtn" (itemClick)="retry()"></app-image-button>
-  <img class="lightTextShadow" [src]="productImg" [ngStyle]="productStyle"/>
+  <img class="lightTextShadow" [src]="productImg" [ngStyle]="styles.productStyle"/>
   <app-image [imgData]="photoFrame"></app-image>
   <div class="noneSelect">
     <app-image [imgData]="coinIcon"></app-image>
