--- a/src/service/ui/head-bar/head-bar.component.html
+++ b/src/service/ui/head-bar/head-bar.component.html
@@ -4,11 +4,11 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 13:36:53
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-30 18:04:30
+ * @LastEditTime: 2021-12-31 10:33:09
 -->
 <div>
   <app-image [imgData]="topBarBg"></app-image>
-  <div class="overFlowHidden" [ngStyle]="facebookHead">
+  <div class="overFlowHidden" [ngStyle]="styles.facebookHead">
     <img src="assets/default_head.png" width="80" height="80">
     <img src="{{headIcon}}" width="80" height="80">
   </div>
@@ -17,7 +17,7 @@
   <app-image [imgData]="coinsBg1"></app-image>
   <app-image [imgData]="coinsBg2"></app-image>
   <app-image-button [imgData]="dailyBonus" (itemClick)="getDailyBonus()"></app-image-button>
-  <div class="redPot noneSelect" *ngIf="!dailyBonusCollected" [ngStyle]="redPot">{{todaysCoins}}</div>
+  <div class="redPot noneSelect" *ngIf="!dailyBonusCollected" [ngStyle]="styles.redPot">{{todaysCoins}}</div>
   <app-image [imgData]="coin"></app-image>
   <app-image [imgData]="ticket"></app-image>
   <app-image-button [imgData]="plus"  (itemClick)="gotoBank()"></app-image-button>
