--- a/src/pages/my/sound-and-logout/sound-and-logout.component.html
+++ b/src/pages/my/sound-and-logout/sound-and-logout.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-16 13:14:54
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-21 15:04:09
+ * @LastEditTime: 2021-12-31 15:21:22
 -->
-<div class="stretchingBg widthApp" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/loading_ui/loading_bg.jpg)'">
+<div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="styles.stretchingBg">
   <app-image [imgData]="title"></app-image>
   <app-image-button [imgData]="backBtn" (itemClick)="gotoBack()"></app-image-button>
   <app-image-button [imgData]="logoutBtn" (itemClick)="logout()"></app-image-button>
