--- a/src/pages/my/user-center/user-center.component.html
+++ b/src/pages/my/user-center/user-center.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-10 15:17:37
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-31 11:36:43
+ * @LastEditTime: 2021-12-31 15:24:21
 -->
-<div class="stretchingBg widthApp" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/loading_ui/loading_bg.jpg)'">
+<div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="styles.stretchingBg">
   <div [ngStyle]="styles.facebookHead">
     <img src="{{headIcon}}" width="140" height="140">
   </div>
