--- a/src/pages/my/video-record/video-record.component.html
+++ b/src/pages/my/video-record/video-record.component.html
@@ -4,12 +4,12 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-27 15:37:52
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-31 15:26:05
+ * @LastEditTime: 2022-01-05 12:01:12
 -->
 <div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="styles.stretchingBg">
   <app-image [imgData]="title"></app-image>
   <app-image-button [imgData]="backBtn" (itemClick)="gotoBack()"></app-image-button>
-  <div class="videoListContainer" [style.height]="pageHeight - 220 + 'px'">
+  <div class="videoListContainer" [style.height]="pageHeight - 220 + 'px'" [ngStyle]="styles.videoList">
     <app-record-list [listHeight]="pageHeight - 350" [listData]="recordDatas" [textureData]="textureData"></app-record-list>
   </div>
 </div>
