--- a/src/pages/my/ledger/ledger-item/ledger-item.component.html
+++ b/src/pages/my/ledger/ledger-item/ledger-item.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-01 10:51:28
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-31 10:57:47
+ * @LastEditTime: 2022-01-05 13:20:57
 -->
-<div class="ticketItem" [style.top]="index * 138 + 5 + 'px'" #itemInList>
+<div [style.top]="index * 138 + 5 + 'px'" #itemInList>
   <app-image [imgData]="itemBg"></app-image>
   <div class="timeDiv">{{line1Str}}<br/>{{line2Str}}</div>
   <div class="noteDiv">{{noteStr}}</div>
