--- a/src/pages/order-for-goods/order-item/order-item.component.html
+++ b/src/pages/order-for-goods/order-item/order-item.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-09 13:34:33
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-09 13:37:14
+ * @LastEditTime: 2022-01-05 13:22:34
 -->
-<div class="ticketItem" [style.top]="index * 201 + 10 + 'px'" #itemInList>
+<div [style.top]="index * 201 + 10 + 'px'" #itemInList>
   <app-image [imgData]="itemBg"></app-image>
   <img [src]="itemData.img" class="productImg"/>
 </div>
