--- a/src/siene/loading-and-po/loading-layer/loading-and-po.component.html
+++ b/src/siene/loading-and-po/loading-layer/loading-and-po.component.html
@@ -4,12 +4,12 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-20 10:43:20
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-31 15:53:29
+ * @LastEditTime: 2022-01-05 14:07:52
 -->
 <div class="overFlowHidden widthApp" [style.height]="mainHeight+'px'" [ngStyle]="loadingBg" [hidden]="!showingLoading">
-  <div class="loadingShadow"></div>
+  <div class="loadingShadow" [ngStyle]="loadingShadow"></div>
   <app-popup-layer></app-popup-layer>
   <div class="widthApp" [hidden]="!showLoadingGif" [style.height]="mainHeight+'px'">
-    <img src="assets/loading_ui/loading.gif" alt="" class="loadingPicture middleCenter">
+    <img src="assets/loading_ui/loading.gif" alt="" class="middleCenter" [ngStyle]="loadingPicture">
   </div>
 </div>
